Make firebolt nicer in diagonals.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21581 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Add smoothing to firebolt so diagonals actually merge seamlessly.
+Nicolas Weeger 2020-12-01
+
 Make the light bulb invisible lighting arches have no_pick
 so that spells can't push them around.
 light/light_bulb.arc
