Fiddle with the big tomato image so that it no longer has the light-colored outline.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21582 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fiddle with the big tomato image so that it doesn't have the insufficient-transparency outline.
+food/produce/tomato_big.base.111.png
+Daniel Hawkins 2020-12-02
+
 Add smoothing to firebolt so diagonals actually merge seamlessly.
 Nicolas Weeger 2020-12-01
 
