--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add horn of Mysteries as a horn artifact. It casts wonder.
+artifacts
+Daniel Hawkins 2020-12-02
+
 Fiddle with the big tomato image so that it doesn't have the insufficient-transparency outline.
 food/produce/tomato_big.base.111.png
 Daniel Hawkins 2020-12-02
