Remove 'damage_physical'.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21590 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Remove damage_physical from flame touch.
+skills/flame_touch.arc
+Nicolas Weeger 2020-12-08
+
 Add name for deep sea, so it does not show up in-game with an underscore.
 ground/deep_sea.arc
 Daniel Hawkins 2020-12-04
