Remove unused archetypes and face.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21595 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Remove unused archetypes.
+system/editcursor.arc
+system/editcursor.face
+system/editor.arc
+Nicolas Weeger 2020-12-10
+
 Clean up tinted ores (green, yellow, red) to no longer use an alpha channel.
 jewel/ores/ore_g.base.111.png
 jewel/ores/ore_r.base.111.png
