Add speech bubble by Kevin Zheng.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21596 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Add speech bubble by Kevin Zheng.
+system/speech.arch
+system/speech.base.111.png
+Nicolas Weeger 2020-12-10
+
 Remove unused archetypes.
 system/editcursor.arc
 system/editcursor.face
