--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add spell casting arrows, based on patch https://sourceforge.net/p/crossfire/patches/364/
+artifacts
+Nicolas Weeger 2020-12-12
+
 Add speech bubble by Kevin Zheng.
 system/speech.arch
 system/speech.base.111.png
