Apply patch https://sourceforge.net/p/crossfire/patches/349/ by Daniel Ziem.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21603 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Apply patch https://sourceforge.net/p/crossfire/patches/349/ by Daniel Ziem.
+formulae
+Nicolas Weeger 2020-12-12
+
 Add spell casting arrows, based on patch https://sourceforge.net/p/crossfire/patches/364/
 artifacts
 Nicolas Weeger 2020-12-12
