--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Add animation to lamppost.
+light/lampost.arc
+light/lampost.base.112.png
+light/lampost.clsc.112.png
+light/lampost.face
+Nicolas Weeger 2020-12-17
+
 Apply patch https://sourceforge.net/p/crossfire/patches/349/ by Daniel Ziem.
 formulae
 Nicolas Weeger 2020-12-12
