Add wand.111 face to wand animation.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21617 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add wand.111 face to wand animation.
+spell/Wand/wand.face
+Nicolas Weeger 2020-12-17
+
 Add animation to lamppost.
 light/lampost.arc
 light/lampost.base.112.png
