--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fix whirlwind exit's face (not visible since animated).
+exit/whirlwind.arc
+Nicolas Weeger 2020-12-17
+
 Add wand.111 face to wand animation.
 spell/Wand/wand.face
 Nicolas Weeger 2020-12-17
