Fix violin's face.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21620 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fix violin's face.
+misc/music/violin.arc
+Nicolas Weeger 2020-12-17
+
 Fix whirlwind exit's face (not visible since animated).
 exit/whirlwind.arc
 Nicolas Weeger 2020-12-17
