New item, unlit (or burnt out) brazier
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21690 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+
+New item, unlit (or burnt out) brazier
+light/unlit_brazier.arc
+light/unlit_brazier.base.111.png
+Rick Tanner 2020-12-30
+
 Fix violin's face.
 misc/music/violin.arc
 Nicolas Weeger 2020-12-17
