Add food shop archetype.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21747 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Add food shop archetype.
+shop/store_food.arc
+shop/store_food.base.x11.png
+shop/store_food.face
+Nicolas Weeger 2020-01-10
+
 Apply modified version of patch https://sourceforge.net/p/crossfire/patches/366/ by Titus
 After discussion on IRC, shop tile building materials as well as flaming tower
 and magma were not included, deemed too specific to HW.
