--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Enable sheepskin crafting for leather.
+Handles both fresh sheepskin and sheepskin rugs.
+formulae
+Daniel Hawkins 2020-01-12
+
 Add food shop archetype.
 shop/store_food.arc
 shop/store_food.base.x11.png
