Make beholder eyes flesh.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21763 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Make beholder eyes be "flesh".
+flesh/misc/behold_eye.arc
+Nicolas Weeger 2020-01-14
+
 Enable sheepskin crafting for leather.
 Handles both fresh sheepskin and sheepskin rugs.
 formulae
