Adjust format for no-collect mechanism.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21765 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Change format for new no-collect mechanism.
+image_info
+Nicolas Weeger 2020-01-14
+
 Make beholder eyes be "flesh".
 flesh/misc/behold_eye.arc
 Nicolas Weeger 2020-01-14
