Fix formula ingredient for "sickle sword".
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21771 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fix formula ingredient for "sickle sword".
+formulae
+Nicolas Weeger 2020-01-16
+
 Change format for new no-collect mechanism.
 image_info
 Nicolas Weeger 2020-01-14
