Add "tissue paper" archetype, to replace ones in Raffle.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21773 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add "tissue paper" archetype, to replace ones in Raffle.
+misc/item/tissue*
+Nicolas Weeger 2020-01-16
+
 Fix formula ingredient for "sickle sword".
 formulae
 Nicolas Weeger 2020-01-16
