Add food shop barn for use in Wolfsburg.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21778 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Add barn-like food store.
+Intended to be used for Wolfsburg Provisions.
+shop/store_food_barn.*
+Daniel Hawkins 2020-01-16
+
 Add "tissue paper" archetype, to replace ones in Raffle.
 misc/item/tissue*
 Nicolas Weeger 2020-01-16
