Add coifs as a type of helmet to the game.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21809 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Add coif as a helmet-like armor.
+Is lighter and has worse protection than regular helmets,
+but can be found earlier from goblin/gnoll drops.
+armour/helmet/coif.base.111.png
+armour/helmet/coif.arc
+armour/helmet/coif.face
+treasures.trs
+Daniel Hawkins 2020-01-17
+
 Add barn-like food store.
 Intended to be used for Wolfsburg Provisions.
 shop/store_food_barn.*
