--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Remove extra space in attack message.
+attackmess
+Nicolas Weeger 2020-01-18
+
 Add coif as a helmet-like armor.
 Is lighter and has worse protection than regular helmets,
 but can be found earlier from goblin/gnoll drops.
