Add archetypes for building instructions, found in enough shops to warrant it.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21820 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add archetypes for building instructions, found in enough shops to warrant it.
+readable/guide/buildings_instructions.arc
+Nicolas Weeger 2020-01-19
+
 Remove extra space in attack message.
 attackmess
 Nicolas Weeger 2020-01-18
