Add rings that can cast spells to the game. These function like low-power rods, since they regernerate spell points much slower and can cast fewer times before running out. The list of spells is a lot more geared toward utility and infrequently-cast spells, such as summon <elemental> and dark vision for that reason. Currently set to be pretty rare. If it turns out these should really be more common than rods, it can be done.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21843 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Add rings that contain spells.
+Functionally like low-power rods, but groups with rings client-side.
+spell/Wand/spell_ring.arc
+spell/Wand/spell_ring.trs
+treasures.trs
+Daniel Hawkins 2021-01-21
+
 Add archetypes for building instructions, found in enough shops to warrant it.
 readable/guide/buildings_instructions.arc
 Nicolas Weeger 2021-01-19
