Slightly nerf quarterstaffs because they are by far the lightest two-handed weapon.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21848 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Adjust quarterstaff after realizing I made a 9 kg weapon keep up with 20 kg weapons.
+weapon/club/quarters.arc
+Daniel Hawkins 2021-01-26
+
 Rebalance two-handed weapons.
 Many of the weapons were worse than a broadsword.
 Adjusted them upward so they were more in-line with the 25kg two-handed sword.
