Add blue and green dragon caves, to generate electric and cold dragons.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21852 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Add blue and green dragon caves, to generate electric and cold dragons.
+monster/dragon/dragoncave.arc
+monster/dragon/dragoncave_blue.base.111.png
+monster/dragon/dragoncave_green.base.111.png
+Nicolas Weeger 2021-01-28
+
 Adjust quarterstaff after realizing I made a 9 kg weapon keep up with 20 kg weapons.
 weapon/club/quarters.arc
 Daniel Hawkins 2021-01-26
