Add spell effects to some balms and foods.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21853 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add spell effects to some balms and foods.
+artifacts
+Nicolas Weeger 2021-01-28
+
 Add blue and green dragon caves, to generate electric and cold dragons.
 monster/dragon/dragoncave.arc
 monster/dragon/dragoncave_blue.base.111.png
