Add Valkyrie guide.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21857 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add Valkyrie guide.
+readable/guide/guide_valkyrie.arc
+Nicolas Weeger 2021-01-28
+
 Add animations to some generators.
 monster/undead/ghost_gen.arc
 monster/undead/ghost_gen.base.112.png
