--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Use 'death_animation' instead of treasurelist with only one item.
+monster/undead/zombie_gen.arch
+monster/undead/zombie_gen.trs
+Nicolas Weeger 2021-01-29
+
 Add broken gravestone, spawn it when a skeleton generator is destroyed.
 misc/broken_gravestone.arc
 misc/broken_gravestone.base.111.png
