Add broken vampire sarcophagus, use it for destroyed generator.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21871 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Add broken vampire sarcophagus, use it for destroyed generator.
+monster/undead/broken_sarcophagus.arc
+monster/undead/broken_sarcophagus.base.111.png
+monster/undead/vampiregen.arc
+Nicolas Weeger 2021-01-30
+
 Add red, dark blue and light blue cave walls, based on the 'cave' archetype.
 wall/dark_blue_cave/
 wall/light_blue_cave/
