--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Copy current 'needle' face to diseased needle, use it.
+disease/diseased_needle.arc
+disease/trap_diseased_needle.base.111.png
+disease/trap_diseased_needle.face
+Nicolas Weeger 2021-01-30
+
 Add broken vampire sarcophagus, use it for destroyed generator.
 monster/undead/broken_sarcophagus.arc
 monster/undead/broken_sarcophagus.base.111.png
