Make drop green to reflect poison.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21873 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Make drop green to reflect poison.
+traps/needle.base.111.png
+Nicolas Weeger 2021-01-30
+
 Copy current 'needle' face to diseased needle, use it.
 disease/diseased_needle.arc
 disease/trap_diseased_needle.base.111.png
