Add a jeweler guide for making rings and amulets from nuggets, and vice-versa.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21880 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Add a jeweler guide for making rings and amulets from nuggets, and vice-versa.
+readable/guide/guide_jeweler.arc
+readable/guide/guide_jeweler.base.111.png
+Nicolas Weeger 2021-02-01
+
 Make drop green to reflect poison.
 traps/needle.base.111.png
 Nicolas Weeger 2021-01-30
