Add comments for nuggets-related formulae.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21883 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add comments for nuggets-related formulae.
+formulae
+Nicolas Weeger 2021-02-01
+
 Add 'broken' generator faces and archetypes.
 monster/dragon/broken_dragoncave.base.111.png
 monster/dragon/broken_dragoncave_blue.base.111.png
