Fix spell effect name.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21889 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fix spell effect name.
+spell/Change_Ability/protection_cold_effect.arc
+spell/Change_Ability/protection_fire_effect.arc
+spell/Healing/cure_disease_effect.arc
+Nicolas Weeger 2021-02-02
+
 Add 'broken' generator faces and archetypes.
 monster/animal/bird_gen.arc
 monster/animal/broken_bird_gen.base.111.png
