Add a name to stonefloor2. This makes it show up as something more immersive than stonefloor2 in-game.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21907 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add name for stonefloor2 so that it shows in in-game as "stone floor"
+floor/stfloor.arc
+Daniel Hawkins 2021-02-05
+
 Add zinc filings and a couple recipes to craft poison food.
 crafting/Materials/zinc_filings.arc
 crafting/Materials/zinc_filings.base.111.png
