--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+New image for firebullet. Moved old image to classic image set.
+spell/Bullet/Fire/firebullet.base.1*1.png
+spell/Bullet/Fire/firebullet.clsc.1*1.png
+Daniel Hawkins 2021-02-06
+
 Add name for stonefloor2 so that it shows in in-game as "stone floor"
 floor/stfloor.arc
 Daniel Hawkins 2021-02-05
