--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Restyle black fire bullet face to look like new fire bullet face.
+Moved old faces to the classic image set.
+misc/blackfirebullet.base.1*1.png
+misc/blackfirebullet.clsc.1*1.png
+Daniel Hawkins 2021-02-07
+
 New image for firebullet. Moved old image to classic image set.
 spell/Bullet/Fire/firebullet.base.1*1.png
 spell/Bullet/Fire/firebullet.clsc.1*1.png
