Correct lack of classic faces for only part of wraith player animation set.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21922 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Add placeholder faces to the classic faceset for wraith feeding
+skill. This prevents jarring style changes when using the wraith
+with the classic face set.
+player/race/wraith_player_feeding.clsc.*
+Daniel Hawkins 2021-02-08
+
 Restyle black fire bullet face to look like new fire bullet face.
 Moved old faces to the classic image set.
 misc/blackfirebullet.base.1*1.png
