--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add slicing knife to uncommon items treasure list.
+treasures.trs
+Nicolas Weeger 2021-02-09
+
 Add placeholder faces to the classic faceset for wraith feeding
 skill. This prevents jarring style changes when using the wraith
 with the classic face set.
