Change recipes for potion of fire and cold resistance, based on the contents of the Fire Temple quest.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21926 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Change recipes for potion of fire and cold resistance, based on the contents of the Fire Temple quest.
+formulae
+Nicolas Weeger 2021-02-09
+
 Add slicing knife to uncommon items treasure list.
 treasures.trs
 Nicolas Weeger 2021-02-09
