Add animation for Valkyrie's altar.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21929 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Add animation for Valkyrie's altar.
+gods/altars/altarvalk.arc
+gods/altars/altarvalk.base.121.png
+gods/altars/altarvalk.face
+Nicolas Weeger 2021-02-09
+
 Change recipes for potion of fire and cold resistance, based on the contents of the Fire Temple quest.
 formulae
 Nicolas Weeger 2021-02-09
