--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+Make broken generators 'misc' instead of 'sign'.
+misc/broken_gravestone.arc
+monster/animal/bird_gen.arc
+monster/animal/scorpi_gen.arc
+monster/beholder/behold_gen.arc
+monster/demon/devil_gen.arc
+monster/dragon/dragoncave.arc
+monster/giant/giant_gen.arc
+monster/goblin/gnoll_gen.arc
+monster/insect/bee/bee_gen.arc
+monster/misc/pixie_gen.arc
+monster/undead/broken_sarcophagus.arc
+monster/undead/broken_skull.arc
+monster/undead/ghost_gen.arc
+Nicolas Weeger 2021-02-13
+
 Add animation for Valkyrie's altar.
 gods/altars/altarvalk.arc
 gods/altars/altarvalk.base.121.png
