Add recipes to craft minor, medium, and major potions of life.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21961 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Add recipes for crafting minor, medium, major, and supreme potions of life.
+Previous supreme recipe is now major.
+formulae
+Daniel Hawkins 2021-02-16
+
 Apply patch #388 Remove default sage NPC message
 by DraugTheWhopper.
 monster/humanoid/Human/c_sage.arc
