--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Introduce some crossover in treasure between random_inorganic and random_ore
+treasures.trs
+Daniel Hawkins 2021-02-16
+
 Add recipes for crafting minor, medium, major, and supreme potions of life.
 Previous supreme recipe is now major.
 formulae
