Expand options for basic smithery crafting.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21975 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add recipes for making long swords, broadswords, and a two-handed sword.
+formulae
+Daniel Hawkins 2021-02-16
+
 Introduce some crossover in treasure between random_inorganic and random_ore
 treasures.trs
 Daniel Hawkins 2021-02-16
