Fix allowed item for horn of Mysteries.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21979 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fix allowed item for horn of Mysteries.
+artifacts
+Nicolas Weeger 2021-02-17
+
 Add recipe for a regular sword.
 formulae
 Nicolas Weeger 2021-02-17
