--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Reduce goblin generator XP from 100 to 50.
+monster/goblin/goblin_gen.arc
+Daniel Hawkins 2021-02-20
+
 Fix allowed item for horn of Mysteries.
 artifacts
 Nicolas Weeger 2021-02-17
