Rename kobold_gen 'generator' to 'kobold hole'.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21987 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Give kobold generator flavorful name: "kobold hole"
+monster/goblin/kobold_gen.arc
+Daniel Hawkins 2021-02-20
+
 Reduce goblin generator XP from 100 to 50.
 monster/goblin/goblin_gen.arc
 Daniel Hawkins 2021-02-20
