--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+New art for kobold generator that puts it in perspective.
+monster/goblin/kobold_gen.base.111.png
+Daniel Hawkins 2021-02-20
+
 Give kobold generator flavorful name: "kobold hole"
 monster/goblin/kobold_gen.arc
 Daniel Hawkins 2021-02-20
