--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Give a value to dice.
+misc/dice.arc
+Nicolas Weeger 2021-02-22
+
 Make messengers and light angels less similar in stats, to warrant their large difference in XP rewarded.
 Swap a couple stats that were higher on the light angel, presumably from when regens were affected by speed.
 Give messengers 80% blind resistance.
