Note on recipes of Assassinating Dragons.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@21995 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Note on recipes of Assassinating Dragons.
+formulae
+Nicolas Weeger 2021-02-23
+
 Give greater dwarven guards enough wc to actually hit things
 wc 20 -> 2 (this is improvement, since negative wc is better)
 dam 12-> 22
