Fix the insane pricing on spell rings.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@22004 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Adjust the value on spell rings to not be insanely expensive.
+spell/Wand/spell_ring.arc
+Daniel Hawkins 2021-02-25
+
 Add faces for arrows and bolts of Assassinating Dragons.
 artifacts
 weapon/bow/arrow_assassinating_dragon.base.101.png
