Make use magic item scrolls actually spawn. This way, barbarians can actually learn the skill.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@22005 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Adjust the spawn rate for literacy and use magic item scrolls.
+literacy chance 15 -> 8, use magic item chance 1 -> 8.
+Since barbarians no longer get UMI out-of-the-box, there
+needs to be a reasonable chance to get it.
+treasures.trs
+Daniel Hawkins 2021-02-25
+
 Adjust the value on spell rings to not be insanely expensive.
 spell/Wand/spell_ring.arc
 Daniel Hawkins 2021-02-25
